--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Windows 8.1</title>
+<title>クレイジーエラー ウィンドウズ 8.1</title>
 </head>
 <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/zLhzmt-i-Q0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1080" height="720" src="https://www.youtube.com/embed/zLhzmt-i-Q0" title="x" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
