--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>クレイジーエラー ウィンドウズ 8.1</title>
+<title>クレイジーエラー</title>
 </head>
 <body>
-<iframe width="1080" height="720" src="https://www.youtube.com/embed/zLhzmt-i-Q0" title="x" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <a href="https://enderjay.github.io/crazyerror/win81.html">ウィンドウズ 8.1</a>
 </body>
 </html>
